--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ pluginManagement {
         id 'org.jetbrains.kotlin.jvm' version '2.0.20'
     }
 }
-include 'desktop', 'android', 'ios', 'core'
+include 'desktop', 'android', 'core'
